# nes_rs

./: .gitignore  Cargo.toml  README.md  README_ZH.md
docs/: mmc3-irq-notes.md
examples/: analyze_audio.rs  desktop_frontend.rs
nes-debug/: eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
nes-debug/public/: audio-processor.js
nes-debug/src/: App.vue  palette.ts
nes-debug/src-tauri/src/: emulator.rs  lib.rs
nes-debug/src/components/: BreakpointPanel.vue  CpuPanel.vue  DisassemblyView.vue  GameScreen.vue  MemoryView.vue  NametableView.vue  PatternTableView.vue  PpuPanel.vue  StatusPanel.vue  ToolBar.vue
nes-debug/src/composables/: useAudioPlayer.ts  useEmulator.ts
nes-debug/src/types/: index.ts
nes-sim/src/: api.rs  bus.rs  cartridge.rs  cpu.rs  lib.rs  ppu.rs  ppu_memory.rs
nes-sim/src/cartridge/: mappers.rs
nes-sim/src/tests/: mod.rs
src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  dma.rs  lib.rs  ppu.rs  ppu_memory.rs  runtime.rs
src/apu/: dmc.rs  mod.rs  tests.rs
src/apu/tests/: mod.rs
src/bus/: tests.rs
src/cartridge/: mappers.rs  mod.rs  tests.rs
src/cartridge/expansion_audio/: mmc5.rs  mod.rs  vrc6.rs
src/cartridge/mappers/: mmc3.rs  mmc5.rs  mod.rs  nrom.rs  vrc6.rs
src/cartridge/tests/: mod.rs
src/cpu/: mod.rs
src/cpu/tests/: execution.rs  mod.rs  reset.rs  unofficial.rs
src/ppu/: mod.rs  tests.rs
src/ppu/tests/: mod.rs
src/tests/: mod.rs
